[package]
name = "dircolors"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_dircolors"
path = "dircolors.rs"

[dependencies]
glob = "0.3.0"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "dircolors"
path = "../../uumain.rs"
