[package]
name = "expr"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_expr"
path = "expr.rs"

[dependencies]
libc = "0.2.42"
onig = "~4.3.2"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "expr"
path = "../../uumain.rs"
