[package]
name = "fmt"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_fmt"
path = "fmt.rs"

[dependencies]
libc = "0.2.42"
unicode-width = "0.1.5"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "fmt"
path = "../../uumain.rs"
