[package]
name = "logname"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_logname"
path = "logname.rs"

[dependencies]
libc = "0.2.42"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "logname"
path = "../../uumain.rs"
