[package]
name = "nice"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_nice"
path = "nice.rs"

[dependencies]
getopts = "0.2.18"
libc = "0.2.42"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "nice"
path = "../../uumain.rs"
