[package]
name = "nproc"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_nproc"
path = "nproc.rs"

[dependencies]
getopts = "0.2.18"
libc = "0.2.42"
num_cpus = "1.10"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "nproc"
path = "../../uumain.rs"
