[package]
name = "numfmt"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_numfmt"
path = "numfmt.rs"

[dependencies]
getopts = "0.2.18"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "numfmt"
path = "../../uumain.rs"
