[package]
name = "od"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_od"
path = "od.rs"

[dependencies]
getopts = "0.2.18"
libc = "0.2.42"
byteorder = "1.3.2"
half = "1.1.1"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "od"
path = "../../uumain.rs"
