[package]
name = "printenv"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_printenv"
path = "printenv.rs"

[dependencies]
getopts = "0.2.18"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "printenv"
path = "../../uumain.rs"
