[package]
name = "printf"
version = "0.0.1"
authors = ["Nathan Ross"]
build = "../../mkmain.rs"

[lib]
name = "uu_printf"
path = "printf.rs"

[dependencies]
itertools = "0.8.0"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "printf"
path = "../../uumain.rs"
