[package]
name = "rm"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_rm"
path = "rm.rs"

[dependencies]
getopts = "0.2.18"
walkdir = "2.2.8"
remove_dir_all = "0.5.1"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "rm"
path = "../../uumain.rs"
