[package]
name = "shred"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_shred"
path = "shred.rs"

[dependencies]
rand = "0.5"
filetime = "0.2.1"
getopts = "0.2.18"
libc = "0.2.42"
time = "0.1.40"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "shred"
path = "../../uumain.rs"
