[package]
name = "shuf"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_shuf"
path = "shuf.rs"

[dependencies]
getopts = "0.2.18"
rand = "0.5"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "shuf"
path = "../../uumain.rs"
