[package]
name = "truncate"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_truncate"
path = "truncate.rs"

[dependencies]
getopts = "0.2.18"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "truncate"
path = "../../uumain.rs"
