[package]
name = "uname"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_uname"
path = "uname.rs"

[dependencies]
clap = "2.32.0"
platform-info = "0.0.1"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "uname"
path = "../../uumain.rs"
