[package]
name = "unexpand"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_unexpand"
path = "unexpand.rs"

[dependencies]
getopts = "0.2.18"
unicode-width = "0.1.5"
uucore = { git = "https://github.com/rivy/rust.uucore", branch = "rivy-local.globwalk" }

[[bin]]
name = "unexpand"
path = "../../uumain.rs"
